# PyVault

./: README.md  docker-compose.yml
backend/: .env  Dockerfile  pyproject.toml
backend/src/pyvault/: api.py  config.py  main.py  models.py  vault.py
backend/tests/: test_vault.py
frontend/: Dockerfile
frontend/src/: app.css
frontend/src/lib/: index.ts  types.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/secrets/: +page.svelte
frontend/src/routes/secrets/new/: +page.svelte
frontend/src/routes/secrets/view/: +page.svelte
k8s/: backend.yaml  frontend.yaml  ingress.yaml  vault.yaml
